--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+          fetch-depth: 0
 
       - name: Generate snake animation
         uses: Platane/snk@v3
