--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -6,13 +6,17 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write   # ✅ allows pushing files to your repo
+  contents: write
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+          fetch-depth: 0
 
       - name: Generate Pacman graph
         uses: yoshi389111/github-profile-3d-contrib@0.7.1
@@ -20,7 +24,7 @@ jobs:
           USERNAME: 0-ashwin-nair-0
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Deploy to GitHub Pages
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
